# ring

./: .gitattributes  .gitignore  .travis.yml  12.ring  CMakeLists.txt  CODE_OF_CONDUCT.md  Calculate_Date_Of_Birth.ring  Calculate_Performance_2.ring  Emp.ring  For_Loop_Nested.ring  Hello.ring  LICENSE  Lesson Load Stdlib.ring  License.txt  Lsson Sum Tow Number.ring  Makefile.am  README.md  README_FedoraLinux.md  README_UbuntuLinux.md  README_Windows.md  README_macOS.md  RingCMD.bat  Start.bat  Test 3.ring  TimeList.ring  build.sh  buildclang.sh  buildgcc.sh  buildvc.bat  buildvc_x64.bat  code 2.ring  code 3.ring  configure.ac  install.bat  install.sh  lesson1.1.ring  lesson1.2.ring  lesson1.3.ring  lesson1.4.ring  lesson1.5.ring  (+24 more)
extensions/microcontroller/ringpico/: CMakeLists.txt  README.md  build.bat  config.bat  deploy.bat  diagram.json  main.ring  picolib.ring  wokwi.toml
extensions/microcontroller/ringpico/picolib/: constants.ring  gencode.bat  picolib.ring  ringpico.cf
language/: CMakeLists.txt  README.md  README_CMake.md  README_FedoraLinux.md  README_Linux.md  README_UbuntuLinux.md  README_Windows.md  README_macOS.md
language/include/: README.md  bert-codegen.h  bert-vm.h  codegen.h  dll_e.h  ext.h  file_e.h  general.h  genlib_e.h  hashlib.h  list_e.h  meta_e.h  objfile.h  os_e.h  parser.h  pooldata.h  rhtable.h  ring.h  ring_api.h  ring_codegen.h  ring_dll_extension.h  ring_ext.h  ring_file_extension.h  ring_general.h  ring_generallib_extension.h  ring_hashtable.h  ring_item.h  ring_items.h  ring_list.h  ring_objfile.h  ring_os_extension.h  ring_parser.h  ring_pooldata.h  ring_refmeta_extension.h  ring_scanner.h  ring_state.h  ring_string.h  ring_test.h  ring_vm.h  ring_vmfile.h  (+17 more)
language/src/: README.md  bert-expr.c  bert-scanner.c  bert-vm.c  bert-vmexpr.c  bert-vmstackvars.c  buildbccstatic.bat  buildclang.bat  buildclang.sh  buildclangstatic.sh  builddos.bat  buildgcc.sh  buildgccstatic.bat  buildgccstatic.sh  buildtccstatic.bat  buildtest.bat  buildtest_x64.bat  buildvc.bat  buildvc_debug.bat  buildvc_x64.bat  buildvcstatic.bat  buildvcw.bat  codegen.c  dll_e.c  expr.c  ext.c  file_e.c  general.c  genlib_e.c  hashlib.c  installdep.sh  installdepfedora.sh  installdepmac.sh  list_e.c  locatevc.bat  math_e.c  meta_e.c  objfile.c  os_e.c  parser.c  (+73 more)
language/tests/: README.md  build.bat  check_tests.bat  globals.ring  test.ring  tests.ring  update_tests.bat
language/tests/correct/: assignment_listname.txt  classregion_test2.txt  classregion_test3.txt  declarative_declarative2.txt  errormsg_arg1.txt  errormsg_arg3.txt  errormsg_call1.txt  errormsg_call2.txt  errormsg_call4.txt  errormsg_errorhandler2.txt  errormsg_test2.txt  errormsg_test3.txt  eval_eval15.txt  eval_eval16.txt  eval_eval18.txt  eval_eval19.txt  eval_eval20.txt  eval_eval21.txt  eval_eval22.txt  eval_evalinscope.txt  eval_nestedeval.txt  eval_runcode1.txt  eval_runcode2.txt  eval_runcode3.txt  eval_runcode4.txt  eval_shutdownsubstate.txt  eval_state2.txt  exitandloop_test9.txt  forinloop_forinandfuncarg.txt  forinloop_forinandlistfunc1.txt  forinloop_forinandlistfunc2.txt  forinloop_forinandlooptwo.txt  forinloop_forinandnew2.txt  forinloop_test11.txt  forinloop_test7.txt  forinloop_test9.txt  general_bitnot.txt  general_colstr.txt  general_conversion10.txt  general_conversion2.txt  (+321 more)
language/tests/current/: arabic_test.txt  assignment_varname.txt  classregion_test.txt  errormsg_arg2.txt  errormsg_arg4.txt  errormsg_call3.txt  errormsg_errorhandler.txt  errormsg_errorhandler2.txt  errormsg_f1.txt  errormsg_test1.txt  errormsg_test3.txt  eval_eval13.txt  eval_eval14.txt  eval_eval15.txt  eval_eval16.txt  eval_eval17.txt  eval_eval18.txt  eval_eval23.txt  eval_local.txt  eval_runcode1.txt  eval_runcode5.txt  eval_state1.txt  eval_state3.txt  exitandloop_test1.txt  exitandloop_test10.txt  exitandloop_test5.txt  exitandloop_test6.txt  exitandloop_test7.txt  exitandloop_test8.txt  forinloop_3dlist.txt  forinloop_forinandlistfunc3.txt  forinloop_forinandlistfunc4.txt  forinloop_forinandnew1.txt  forinloop_test10.txt  forinloop_test11.txt  forinloop_test5.txt  forinloop_test7.txt  forinloop_test8.txt  general_bsthenupdate.txt  general_conversion11.txt  (+353 more)
language/tests/scripts/arabic/: test.ring  ممتاز.ring
language/tests/scripts/assignment/: listname.ring  test.ring  test2.ring  test3.ring  test5.ring  test8.ring  varname.ring
language/tests/scripts/classregion/: test.ring  test2.ring  test5.ring
language/tests/scripts/comment/: comment3.ring  comment4.ring  comment5.ring  comment6.ring
language/tests/scripts/errormsg/: arg1.ring  arg2.ring  arg3.ring  arg4.ring  call1.ring  call2.ring  call3.ring  call4.ring  call5.ring  errorhandler.ring  errorhandler2.ring  f1.ring  f2.ring  f3.ring  sub1.ring  sub2.ring  test1.ring  test2.ring  test3.ring
language/tests/scripts/eval/: eval1.ring  eval10.ring  eval11.ring  eval12.ring  eval13.ring  eval14.ring  eval15.ring  eval16.ring  eval17.ring  eval18.ring  eval19.ring  eval2.ring  eval20.ring  eval21.ring  eval22.ring  eval23.ring  (+18 more)
language/tests/tryccode/: README.md  buildtest.bat  buildtest_x64.bat  ring_test.c.isense  ring_test.fpt  ring_test.ssf  test.c  test.h
language/tryccode/: buildtest.bat  buildtest_x64.bat
language/visualsrc/: build.bat  buildtest.bat  codeformat.bat  commentsnl.ring  pwct_project.isense  ring.c.isense  ring.config  ring.fpt  ring.ssf  ring_codegen.c.isense  ring_codegen.config  ring_codegen.fpt  ring_codegen.ssf  ring_dll_extension.c.isense  ring_dll_extension.config  ring_dll_extension.fpt  ring_expr.c.isense  ring_expr.config  ring_expr.fpt  ring_file_extension.c.isense  ring_file_extension.config  ring_file_extension.fpt  ring_general.c.isense  ring_general.config  ring_general.fpt  ring_general.ssf  ring_generallib_extension.c.isense  ring_generallib_extension.config  ring_generallib_extension.fpt  ring_hashlib.c.isense  ring_hashlib.config  ring_hashlib.fpt  ring_hashlib.ssf  ring_hashtable.FPT  ring_hashtable.c.isense  ring_hashtable.config  ring_hashtable.ssf  ring_item.c.isense  ring_item.config  ring_item.fpt  (+150 more)
(+17017 files in other folders)
